kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: my-application
spec:
  selector:
    app: backend
  ports:
    - port: 8080
  type: ClusterIP
