kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: my-application
spec:
  selector:
    app: frontend
  ports:
    - port: 5173
  type: ClusterIP
