kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: my-application
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
  type: ClusterIP
